examples/test/testpolicy7685.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7685
  namespace: namespace215
spec:
  podSelector:
    matchLabels:
      key2: value46
      key6: value39
      key49: value11
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key17: value34
      podSelector:
        matchLabels:
          key27: value47
          key38: value38
